<resources>
    <string name="app_name">Assignment5</string>
    <string name="hint_Email">Email Id</string>
    <string name="hint_Password">Password</string>
    <string name="cName">Remember Me</string>
    <string name="btnLogin">Login</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="mobile">Mobile :</string>
    <string name="address">Address :</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="hintAddress">Address</string>
    <string name="submit">submit</string>
    <string name="hintName">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_file">Save as File</string>
    <string name="save_details">Save Details</string>
</resources>