<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:inputType="text"
        android:hint="@string/hintName"
        android:textSize="25sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_Email"
        android:textSize="25sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMobile"
        android:inputType="number"
        android:textSize="25sp"
        android:hint="@string/mobile_number"/>


        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/hintAddress"
            android:textSize="25sp"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        android:visibility="gone"/>

</LinearLayout>